# reccli

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  MVP.md  PROJECT_PLAN.md  README.md  RecCli.devproject  checkout.html  demo-ui.html  distribution.md  email_templates.md  index.html  install.sh  pyproject.toml  reccli.py  requirements.txt  uninstall.sh
.claude-plugin/: plugin.json
apps/web/: .env.local.template  package.json  tsconfig.json
archive/examples/: unified_index_example.py
benchmarks/longmemeval/: evaluate.py  run_agentic_benchmark.py  run_benchmark.py
devsession/: AI_PROMPTS.md  ARCHITECTURE.md  CONTEXT_LOADING.md  DEVPROJECT_FILE.md  DEVSESSION_FORMAT.md  PROJECT_INITIALIZATION.md  PROJECT_ONBOARDING.md  README.md  SESSION_STORAGE.md  UNIFIED_VECTOR_INDEX.md
docs/: README.md  document-index.md  restructuring-plan.md
docs/guides/: DONE.md  (+6 more)
hooks/: hooks.json
nextjs/: .env.local.template  api_routes.js  landing_page_v2.html  nextjs_landing.js  package.json
v2-devsession-recorder/: DESIGN_DECISIONS.md  MESSAGE_RANGE_SPEC.md  NATIVE_LLM_GUIDE.md  NUMPY_OPTIMIZATION_PLAN.md  PHASE_7_COMPLETE.md  PHASE_7_TESTING_GUIDE.md  PHASE_8_COMPLETE.md  PHASE_8_USAGE_GUIDE.md  PROJECT_PLAN.md  README.md  RECCLI_CLI_UI.md  SESSION_2025_11_07_SUMMARY.md  STREAMING_HYBRID_RETRIEVAL.md  SUMMARIZER_LINKING_INDEX_SAFEGUARDS.md  VECTOR_OPTIMIZATION_STATUS.md  VECTOR_SEARCH_ANALYSIS.md  VECTOR_SEARCH_COMPLETION.md  VECTOR_SEARCH_FINAL.md  install.sh  minimal_input.py  reccli-gui.py  reccli-v2.py  requirements.txt  test_paste.txt
web/: SETUP_GUIDE.md  package.json
(+151 files in other folders)
