[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reccli"
version = "0.9.0"
description = "Temporal memory engine for coding agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Will Luecke" }
]

[project.scripts]
reccli = "reccli.runtime.cli:main"

[tool.setuptools.packages.find]
where = ["packages"]
include = ["reccli*"]
